--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
             <a href="{{ url_for('logout') }}">Logout</a>
         {% else %}
             <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('register') }}">Register</a>
+            <a href="{{ url_for('signup') }}">Signup</a>
         {% endif %}
     </nav>
     <div class="content">
