--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,8 +4,8 @@
 <form method="POST">
     {{ form.hidden_tag() }}
     <div>
-        {{ form.user_name.label }}<br>
-        {{ form.user_name() }}
+        {{ form.email.label }}<br>
+        {{ form.email() }}
     </div>
     <div>
         {{ form.password.label }}<br>
