--- a/app/templates/add_page.html
+++ b/app/templates/add_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Create New Page</h1>
+<h1>Создание новой страницы</h1>
 <form method="POST">
     <div class="form-group">
         <label>Title:</label>
@@ -13,6 +13,6 @@
         <textarea name="content" rows="10" class="form-control"></textarea>
     </div>
 
-    <button type="submit" class="btn">Create Page</button>
+    <button type="submit" class="btn">Создать страницу</button>
 </form>
 {% endblock %}
