--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Electronic Archive</title>
+    <title>Сайт архива</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
 </head>
 <body>
     <nav>
         {% if current_user.is_authenticated %}
-            <a href="{{ url_for('logout') }}">Logout</a>
+            <a href="{{ url_for('logout') }}">Выйти</a>
         {% else %}
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('signup') }}">Signup</a>
+            <a href="{{ url_for('login') }}">Авторизация</a>
+            <a href="{{ url_for('signup') }}">Регистрация</a>
         {% endif %}
     </nav>
     <div class="content">
