--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Registration</h2>
+<h2>Регистрация</h2>
 <form method="POST">
     {{ form.hidden_tag() }}
     <div>
