--- a/app/templates/upload_file.html
+++ b/app/templates/upload_file.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Upload File</h1>
+<h1>Загрузка файла</h1>
 <form method="POST" enctype="multipart/form-data">
     <div class="form-group">
-        <label>Select file:</label>
+        <label>Выберите файле:</label>
         <input type="file" name="file" required>
     </div>
-    <button type="submit" class="btn">Upload</button>
+    <button type="submit" class="btn">Загрузить</button>
 </form>
 {% endblock %}
