--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>User Management</h1>
+<h1>Редактирование пользователей</h1>
 <table class="table">
     <thead>
         <tr>
             <th>ID</th>
-            <th>Username</th>
+            <th>Имя пользователя</th>
             <th>Email</th>
-            <th>Role</th>
-            <th>Actions</th>
+            <th>Тип пользователя</th>
+            <th>Действие</th>
         </tr>
     </thead>
     <tbody>
@@ -19,14 +19,14 @@
             <td>{{ user.user_name }}</td>
             <td>{{ user.email }}</td>
             <td>
-                {% if user.account_type == 1 %}Admin
-                {% elif user.account_type == 2 %}Editor
-                {% elif user.account_type == 3 %}Reader
+                {% if user.account_type == 1 %}Администратор
+                {% elif user.account_type == 2 %}Редактор
+                {% elif user.account_type == 3 %}Наблюдатель
                 {% endif %}
             </td>
             <td>
-                <a href="#" class="btn">Edit</a>
-                <a href="#" class="btn danger">Delete</a>
+                <a href="#" class="btn">Изменить</a>
+                <a href="#" class="btn danger">Удалить</a>
             </td>
         </tr>
         {% endfor %}
